// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BuyButton /> should match snapshot loading 1`] = `
<DocumentFragment>
  <svg
    class="content-loader-mock"
  />
</DocumentFragment>
`;

exports[`<BuyButton /> should match snapshot normal 1`] = `
<DocumentFragment>
  <button
    type="button"
  >
    Test
  </button>
</DocumentFragment>
`;

exports[`<BuyButton /> should match snapshot unavailable 1`] = `
<DocumentFragment>
  <button
    disabled=""
    type="button"
  >
    <span>
      Unavailable
    </span>
  </button>
</DocumentFragment>
`;
